--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "firebase": "^12.0.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
